# desktop-memo

./: .gitignore  CLAUDE.md  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: category.rs  memo.rs  mod.rs  settings.rs  window.rs
src-tauri/src/scheduler/: mod.rs  reminder.rs
src-tauri/src/storage/: store.rs
src/main/: autoStartManager.ts  index.ts  ipcHandlers.ts  reminderService.ts  storeManager.ts  trayManager.ts  windowManager.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  vite-env.d.ts
src/renderer/components/: AddMemoModal.tsx  CategoryTabs.tsx  CompactMemoList.tsx  MemoItem.tsx  MemoList.tsx  MemoWidget.tsx  MiniMemoList.tsx  SettingsPanel.tsx  UltraMiniMemoList.tsx
src/renderer/store/: useMemoStore.ts
src/renderer/styles/: globals.css
src/renderer/types/: index.ts
src/shared/: types.ts
src/types/: tauri.ts
